tests/preproc_samples/invalid/same_name_warning.mas
%m m1 {
    !nop;
}

%mi m2 !nop;

%i m1 {
m2:
    !nop;
}

%i m2 {
m1:
    !nop;
}